===========
PyObjC NEWS
===========

An overview of the relevant changes in new, and older, releases.

Version 2.2 (...)
-----------------

- BUGFIX: Enable building from source with the Python.org binary distribution.

- BUGFIX: Fix crash when using the animotor proxy feature of CoreAnimation. 
  That is, the following code now works::

	app = NSApplication.sharedApplication()
	window = NSWindow.alloc().init()
	anim = window.animator()
	anim.setAlphaValue_(1.0)


- Improve handling of non-methods in objc.Category:

  * The docstring of a category is now ignored

  * You'll get an explict error exception when trying to add ``ivar``s to
    a class

  * It's now possible to add class attributes in a category::

       class NSObject (objc.Category(NSObject)):
           aClassDefault = [ 1, 2, 3 ]

	   @classmethod
	   def getDefault(cls):
	       return cls.aClassDefault



- Fixed support for ``FSRef`` and ``FSSpec`` structures. 

  * Transparently convert ``Carbon.File.FSRef`` and ``Carbon.File.FSSpec``
    instances to C.

  * The types ``objc.FSRef`` and ``objc.FSSpec`` are the native
    PyObjC representation for ``FSRef`` and ``FSSpec`` structures.

- Added more magic signature heuristics: the delegate selector for
  sheets is now automaticly recognized, removing the need for
  the decorator ``AppHelper.didEndSelector`` (which will stay present
  for backward compatibility).

  FIXME: Do the same thing for ``objc.accessor``. Both are a frequent
  source for errors.

- Added ``PyObjC.TestSupport``. This is an unsupported module containing
  useful functionality for testing PyObjC itself.

- Added ``free_result`` attribute to the ``retval`` element in metadata
  files. When this attribute has value ``'true'`` the return value of the
  C function (or ObjC-method) will be free-ed using the function ``free()``,
  otherwise the bridge assumes other code is reponsible to free the result.

  This is to be used for low-level C API's that return a pointer to a